--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -279,3 +279,14 @@
         /* IE e Edge */
     }
 }
+
+.dark ::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    opacity: 0.6;
+    transition: opacity 0.2s;
+    cursor: pointer;
+}
+
+.dark ::-webkit-calendar-picker-indicator:hover {
+    opacity: 1;
+}
